# gifEndecoder

./: README.md  package-lock.json  package.json
lib/: index.js
native/: Cargo.toml
native/src/: lib.rs
types/: gifMeta.interface.ts  index.d.ts
